--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,22 +2,7 @@
     <div class="row" id="overlay">
         <div class="col-lg-12">
             <div class="container mt-2">
-              <div class="row p-2">
-                  <div class="col-lg-3 ">
-                      <a style="color:white;text-decoration:none;font-size:1.3rem;"  class="font-weight-bold" routerLink="/">Start Bootstrap</a>
-                  </div>
-                  <div class="col-lg-6 text-center">
-                  </div>
-                  <div class="col-lg-1">
-                      <a style="color:white;text-decoration:none;"  class="font-weight-bold" routerLink="/">HOME</a>
-                  </div>
-                  <div class="col-lg-1">
-                      <a style="color:white;text-decoration:none;"  class="font-weight-bold" routerLink="/about">ABOUT</a>
-                  </div>
-                  <div class="col-lg-1">
-                       <a href="https://github.com/padegalmadhuri" target="_blank">  <i style="color:white;"class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-                  </div>
-              </div>
+                <app-navbar></app-navbar>
                 <div class="row p-5 ">
                     <div class="col-lg-12 pb-5 ">
                         <div class="container ">
