--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,22 +5,9 @@
               <!-- <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
                   &#9776;
                 </button> -->
-                <div class="row p-2">
-                    <div class="col-lg-3 ">
-                        <a style="color:white;text-decoration:none;font-size:1.3rem;"  class="font-weight-bold" routerLink="/">Start Bootstrap</a>
-                    </div>
-                    <div class="col-lg-6 text-center">
-                    </div>
-                    <div class="col-lg-1">
-                        <a style="color:white;text-decoration:none;"  class="font-weight-bold" routerLink="/">HOME</a>
-                    </div>
-                    <div class="col-lg-1">
-                        <a style="color:white;text-decoration:none;"  class="font-weight-bold" routerLink="/about">ABOUT</a>
-                    </div>
-                    <div class="col-lg-1">
-                         <a href="https://github.com/padegalmadhuri" target="_blank">  <i style="color:white;"class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-                    </div>
-                </div>
+
+                    <app-navbar></app-navbar>
+
                 <div class="row p-5 mt-5">
                     <div class="col-lg-12 text-center pb-5 ">
                         <h2  style="color:white;" id="title"><strong>Clean Blog</strong></h2>
